fix(Client): Fix spacing

--- a/client/styles/_home.scss
+++ b/client/styles/_home.scss
@@ -1,10 +1,6 @@
 .home {
   --sectionSeparator: 5rem 0;
-  --h2Margin: 5rem 0;
-
-  > section {
-    margin-bottom: 3rem;
-  }
+  --h2Margin: 6rem 0 5rem 0;
 
   > img {
     position: absolute;
@@ -281,7 +277,7 @@
         }
 
         &:last-child {
-          margin-bottom: 0;
+          margin-bottom: 0 !important;
         }
       }
     }
@@ -602,6 +598,8 @@ body[modalOpened='true']
 
 @media (max-width: 1200px) {
   .home {
+    --sectionSeparator: 3rem 0;
+
     > img {
       height: 50vh;
     }
@@ -713,7 +711,7 @@ body[modalOpened='true']
 
 @media (max-width: 768px) {
   .home {
-    --h2Margin: 3rem 0;
+    --h2Margin: 5rem 0 3rem 0;
 
     h2 {
       font-size: 1.8rem;
